# YZM104Proje-PlatformKosucu

./: CMakeLists.txt  README.md  main.cpp
src/: Coin.cpp  Coin.hpp  Enemy.cpp  Enemy.hpp  FlyingEnemy.cpp  FlyingEnemy.hpp  GameFunctions.cpp  GameFunctions.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.hpp  main.cpp
